single all stocks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ stock.excel.pool.size=12
 
 stock.excel.http.maxHostConnections=1
 stock.excel.http.maxTotalConnections=99
+
+mongo.maxWaitTime=1200000
+mongo.maxConnectionLifeTime=1200000
+mongo.connectTimeout=300000
