--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 
 stock.excel.dir=/Users/luoruofeng/stock/data/
+stock.tempExcel.dir=/Users/luoruofeng/stock/data/temp/
 stock.excel.size=10485760
 stock.excel.suffix=csv
 stock.excel.pool.size=12
@@ -13,3 +14,6 @@ stock.excel.http.maxTotalConnections=99
 mongo.maxWaitTime=1200000
 mongo.maxConnectionLifeTime=1200000
 mongo.connectTimeout=300000
+
+
+#logging.level.root=DEBUG 
